Bug 496400 - exFAT volume label longer than 10 chars causes error
Summary: exFAT volume label longer than 10 chars causes error
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.3
Platform: NixOS Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-17 22:01 UTC by Elias Probst
Modified: 2024-11-17 22:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2024-11-17 22:01:42 UTC
SUMMARY
When using a label longer than 10 characters for an exFAT volume, KPartitionManager fails to apply those changes and the error displayed doesn't provide any information on why it failed.

STEPS TO REPRODUCE
1. Create an exFAT volume
2. Set the value of "Label" to "LongLongLabel"
3. Apply the changes

OBSERVED RESULT
- KPartitionManager fails to apply the changes.
- The "Details" view of the corresponding job displays:

> Job: Set the file system label on partition ‘/dev/sdb1’ to "LongLongLabel" 
> Command: tune.exfat /dev/sdb1 -L LongLongLabel 
> Set the file system label on partition ‘/dev/sdb1’ to "LongLongLabel": Error
> Create a new partition (58,94 GiB, exfat) on ‘/dev/sdb’: Error

EXPECTED RESULT
KPartitionManager doesn't allow to set labels on exFAT longer than 10 characters and shows a corresponding validation failure in at least the following dialogs:
- Right click on volume → Properties
- Right click on unallocated space → New

SOFTWARE/OS VERSIONS
Operating System: NixOS 24.11
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0
Kernel Version: 6.6.60 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 19.4 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 520

ADDITIONAL INFORMATION
When executing "tune.exfat /dev/sdb1 -L LongLongLabel" manually (which is what the job details show, is also executed by KPartitionManager), it displays a helpful message:
> exfatprogs version : 1.2.5
> input string is too long
> failed to encode volume label

So another change that probably should be made is, to display the command output in the "Details" view, since this would have more easily allowed to figure out what actually went wrong.
Comment 1 Andrius Štikonas 2024-11-17 22:12:55 UTC
Git commit 86560ed405bd356544354c033dfe47412e0f0096 by Andrius Štikonas.
Committed on 17/11/2024 at 22:12.
Pushed by stikonas into branch 'master'.

Limix exfat labels to 11 characters.

M  +1    -1    src/fs/exfat.cpp

https://invent.kde.org/system/kpmcore/-/commit/86560ed405bd356544354c033dfe47412e0f0096
Comment 2 Andrius Štikonas 2024-11-17 22:13:21 UTC
Git commit 98eb083443a7064342d853bfd38cd8adb15160db by Andrius Štikonas.
Committed on 17/11/2024 at 22:13.
Pushed by stikonas into branch 'release/24.12'.

Limix exfat labels to 11 characters.

M  +1    -1    src/fs/exfat.cpp

https://invent.kde.org/system/kpmcore/-/commit/98eb083443a7064342d853bfd38cd8adb15160db