Limix exfat labels to 11 characters.

BUG: 496400